@@ -8,12 +8,11 @@ import com.example.exam.mappers.UserMapper;
 import com.example.exam.repositories.UserRepository;
 import com.example.exam.services.UserService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Lazy;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,54 +22,43 @@ public class UserServiceImpl implements UserService {
     private final UserMapper userMapper;
     private final PasswordEncoder passwordEncoder;
 
-    private UserService self;
-
-    @Autowired
-    public void setSelf(@Autowired @Lazy UserService self) {
-        this.self = self;
-    }
-
     @Override
     public UserResponseDTO createUser(UserRequestDTO dto, User admin) {
-        if (!admin.getRoles().contains(Role.ADMIN)) {
-            throw new RuntimeException("Only admin can create users");
+        // Проверяем, что админ создает пользователей
+        if (admin.getRole() != Role.ADMIN) {
+            throw new RuntimeException("Only admins can create users");
         }
 
         User user = userMapper.toEntity(dto);
-        if (dto.getPassword() != null) {
-            user.setPassword(passwordEncoder.encode(dto.getPassword()));
-        }
-        user.setEnabled(true);
-
-        User saved = userRepository.save(user);
-        return userMapper.toDTO(saved);
+        // Хэшируем пароль
+        user.setPassword(passwordEncoder.encode(dto.getPassword()));
+        // Сохраняем пользователя
+        user = userRepository.save(user);
+        return userMapper.toDTO(user);
     }
 
     @Override
     public List<UserResponseDTO> getAllUsers() {
-        return userRepository.findAll()
-                .stream()
+        return userRepository.findAll().stream()
                 .map(userMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public UserResponseDTO getUserById(Long id) {
-        return userRepository.findById(id)
-                .map(userMapper::toDTO)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
+        return userMapper.toDTO(user);
     }
 
     @Override
     public void deleteUser(Long id, User admin) {
-        if (!admin.getRoles().contains(Role.ADMIN)) {
-            throw new RuntimeException("Only admin can delete users");
+        if (admin.getRole() != Role.ADMIN) {
+            throw new RuntimeException("Only admins can delete users");
         }
-
         if (!userRepository.existsById(id)) {
-            throw new RuntimeException("User not found");
+            throw new RuntimeException("User not found with id: " + id);
         }
-
         userRepository.deleteById(id);
     }
 }
